--- a/ofisart.azFront/index.html
+++ b/ofisart.azFront/index.html
@@ -11,6 +11,12 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Shippori+Mincho+B1&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Murecho:wght@100..900&family=Shippori+Mincho+B1&display=swap" rel="stylesheet">
+<!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@100&display=swap" /> -->
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Nunito:wght@200&display=swap" />
+
     <title>Vite + React</title>
   </head>
   <body>
